--- a/Sqnc2Sqnc_LSTM/README
+++ b/Sqnc2Sqnc_LSTM/README
@@ -10,4 +10,4 @@ It was Developed and tested on google colab: https://colab.research.google.com
 Also test on centos 7 and windows 10.
 
 Credit: https://machinelearningmastery.com/time-series-prediction-lstm-recurrent-neural-networks-python-keras/
-Reference: amzn.to/2paZ53b
+Reference: http://amzn.to/2paZ53b
