--- a/ABCs_Of_PyTorch.ipynb
+++ b/ABCs_Of_PyTorch.ipynb
@@ -6,7 +6,7 @@
       "name": "ABCs Of PyTorch.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "private_outputs": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
